--- a/main-code/package.json
+++ b/main-code/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^10.9.2",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "reactstrap": "^9.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
