--- a/main-code/package.json
+++ b/main-code/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@material-tailwind/react": "^1.4.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "font-awesome": "^4.7.0",
