--- a/main-code/package.json
+++ b/main-code/package.json
@@ -14,12 +14,14 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^1.4.2",
+    "chart.js": "^4.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.9.2",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "reactstrap": "^9.1.8"
   },
