--- a/main-code/package.json
+++ b/main-code/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^1.4.2",
@@ -19,7 +22,9 @@
     "eslint-config-next": "13.2.4",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.9.2",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
