--- a/main-code/package.json
+++ b/main-code/package.json
@@ -25,10 +25,12 @@
     "lodash": "^4.17.21",
     "next": "13.2.4",
     "numeral": "^2.0.6",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "reactstrap": "^9.1.8"
+    "reactstrap": "^9.1.8",
+    "swr": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
