--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: "3"
 
 services:
   ajna-staging:
     build:
       context: ../../
       dockerfile: docker/staging/Dockerfile
-    image: ajna-staging
+    image: "${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}"
     ports:
-      - '3000:3000'
+      - "3000:3000"
