--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^1.4.2",
     "chart.js": "^4.2.1",
+    "chartjs-adapter-luxon": "^1.3.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "font-awesome": "^4.7.0",
@@ -29,7 +30,6 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "reactstrap": "^9.1.8",
     "swr": "^2.1.3"
   },
   "devDependencies": {
