--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-tailwind/react": "^1.4.2",
     "chart.js": "^4.2.1",
     "chartjs-adapter-luxon": "^1.3.1",
+    "classnames": "^2.3.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "font-awesome": "^4.7.0",
