--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "chart.js": "^4.2.1",
     "chartjs-adapter-luxon": "^1.3.1",
+    "chartjs-plugin-annotation": "^3.0.1",
     "classnames": "^2.3.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
