--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:prettier": "prettier --check './src/**/*.js'",
-    "lint:prettier-write": "prettier --write './src/**/*.js'",
-    "lint:eslint": "eslint ./src --max-warnings=0 --ext .js"
+    "lint:prettier": "prettier --check './src/**/*.{js,jsx}'",
+    "lint:prettier-write": "prettier --write './src/**/*.{js,jsx}'",
+    "lint:eslint": "eslint ./src --max-warnings=0 --ext .js,.jsx"
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
