--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@sentry/react": "^7.70.0",
     "animate.css": "4.1.1",
     "axios": "^1.2.3",
     "chart.js": "^4.2.0",
@@ -47,7 +48,6 @@
     "react-refresh": "^0.14.0",
     "react-router": "6.9.0",
     "react-router-dom": "6.9.0",
-    "react-router-v6-instrumentation": "^2.0.1",
     "react-select": "^5.7.0",
     "slugify": "^1.6.5",
     "strftime": "^0.10.1",
