--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ajna",
   "version": "0.2.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -13,30 +14,30 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@sentry/react": "^7.70.0",
+    "@sentry/react": "^7.91.0",
     "animate.css": "4.1.1",
-    "axios": "^1.2.3",
-    "chart.js": "^4.2.0",
+    "axios": "^1.6.4",
+    "chart.js": "^4.4.1",
     "chartjs-adapter-luxon": "^1.3.0",
-    "chartjs-plugin-annotation": "^2.1.2",
-    "classnames": "^2.3.2",
-    "eslint": "8.36.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "classnames": "^2.5.1",
+    "eslint": "8.56.0",
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "ethereum-blockies-base64": "^1.0.2",
     "lodash": "^4.17.21",
-    "luxon": "^3.2.1",
+    "luxon": "^3.4.4",
     "numeral": "^2.0.6",
-    "prettier": "^2.8.3",
+    "prettier": "^3.1.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
@@ -46,20 +47,20 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.34.7",
     "react-refresh": "^0.14.0",
-    "react-router": "6.9.0",
-    "react-router-dom": "6.9.0",
-    "react-select": "^5.7.0",
+    "react-router": "6.21.1",
+    "react-router-dom": "6.21.1",
+    "react-select": "^5.8.0",
     "slugify": "^1.6.5",
     "strftime": "^0.10.1",
     "url-join": "^5.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.30",
-    "sass": "^1.67.0",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "sass": "^1.69.7",
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.10"
   },
   "eslintConfig": {
     "extends": [
