--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "url-join": "^5.0.0"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "^2.10.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
