--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "ajna",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 10",
     "preview": "vite preview",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:prettier": "prettier --check './src/**/*.{js,jsx}'",
-    "lint:prettier-write": "prettier --write './src/**/*.{js,jsx}'",
-    "lint:eslint": "eslint ./src --max-warnings=0 --ext .js,.jsx"
+    "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
+    "prettier": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
+    "prettier:fix": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "prepare": "husky install",
+    "type-check": "tsc"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --ext js,jsx,ts,tsx --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -26,13 +35,6 @@
     "chartjs-adapter-luxon": "^1.3.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "classnames": "^2.5.1",
-    "eslint": "8.56.0",
-    "eslint-config-react-app": "7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
     "ethereum-blockies-base64": "^1.0.2",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
@@ -56,20 +58,27 @@
   },
   "devDependencies": {
     "@sentry/vite-plugin": "^2.10.2",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "8.56.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.1",
     "postcss": "^8.4.33",
     "sass": "^1.69.7",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
     "vite": "^5.0.11"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ],
-    "rules": {
-      "no-console": 1
-    }
   },
   "prettier": {
     "printWidth": 88
