--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -9,16 +9,20 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Use Node.js 18.x
+      - uses: actions/checkout@v3
+      - name: Set Node.js 21.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
-          cache: npm
-      - name: Install dependencies
-        run: npm ci
-      - name: Lint
-        run: npm run lint
-      - name: Build
-        run: npm run build
+          node-version: 21.x
+      - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
+      - name: Run lint check
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: lint
+      - name: Run prettier check
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: prettier
