--- a/package.json
+++ b/package.json
@@ -22,64 +22,64 @@
     ]
   },
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@sentry/react": "^7.92.0",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@fortawesome/fontawesome-svg-core": "6.5.2",
+    "@fortawesome/free-brands-svg-icons": "6.5.2",
+    "@fortawesome/free-regular-svg-icons": "6.5.2",
+    "@fortawesome/free-solid-svg-icons": "6.5.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@sentry/react": "7.92.0",
     "animate.css": "4.1.1",
-    "axios": "^1.6.5",
-    "chart.js": "^4.4.1",
-    "chartjs-adapter-luxon": "^1.3.0",
-    "chartjs-plugin-annotation": "^3.0.1",
-    "classnames": "^2.5.1",
-    "ethereum-blockies-base64": "^1.0.2",
-    "lodash": "^4.17.21",
-    "luxon": "^3.4.4",
-    "numeral": "^2.0.6",
-    "prettier": "^3.1.1",
-    "query-string": "^8.1.0",
-    "react": "^18.2.0",
-    "react-app-polyfill": "^3.0.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-datetime": "^3.2.0",
-    "react-dev-utils": "^12.0.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.34.7",
-    "react-refresh": "^0.14.0",
+    "axios": "1.6.8",
+    "chart.js": "4.4.2",
+    "chartjs-adapter-luxon": "1.3.1",
+    "chartjs-plugin-annotation": "3.0.1",
+    "classnames": "2.5.1",
+    "ethereum-blockies-base64": "1.0.2",
+    "lodash": "4.17.21",
+    "luxon": "3.4.4",
+    "numeral": "2.0.6",
+    "prettier": "3.1.1",
+    "query-string": "8.1.0",
+    "react": "18.2.0",
+    "react-app-polyfill": "3.0.0",
+    "react-chartjs-2": "5.2.0",
+    "react-datetime": "3.2.0",
+    "react-dev-utils": "12.0.1",
+    "react-dom": "18.2.0",
+    "react-query": "3.34.7",
+    "react-refresh": "0.14.2",
     "react-router": "6.21.3",
     "react-router-dom": "6.21.3",
-    "react-select": "^5.8.0",
-    "slugify": "^1.6.5",
-    "strftime": "^0.10.1",
-    "url-join": "^5.0.0",
-    "vite-plugin-radar": "^0.9.3"
+    "react-select": "5.8.0",
+    "slugify": "1.6.6",
+    "strftime": "0.10.2",
+    "url-join": "5.0.0",
+    "vite-plugin-radar": "0.9.4"
   },
   "devDependencies": {
-    "@sentry/vite-plugin": "^2.10.2",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
+    "@sentry/vite-plugin": "2.10.2",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.19",
     "eslint": "8.56.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-config-react-app": "7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.0.1",
-    "postcss": "^8.4.33",
-    "sass": "^1.69.7",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.11"
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.7",
+    "husky": "8.0.3",
+    "lint-staged": "15.0.1",
+    "postcss": "8.4.38",
+    "sass": "1.69.7",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.2.2",
+    "vite": "5.0.11"
   },
   "prettier": {
     "printWidth": 88
