--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@fortawesome/free-regular-svg-icons": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@sentry/react": "7.92.0",
+    "@sentry/react": "^8.0.0",
     "animate.css": "4.1.1",
     "axios": "1.6.8",
     "chart.js": "4.4.2",
@@ -58,7 +58,7 @@
     "vite-plugin-radar": "0.9.4"
   },
   "devDependencies": {
-    "@sentry/vite-plugin": "2.10.2",
+    "@sentry/vite-plugin": "^2.16.1",
     "@typescript-eslint/eslint-plugin": "6.19.1",
     "@typescript-eslint/parser": "6.19.1",
     "@vitejs/plugin-react": "4.2.1",
