--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@fortawesome/free-regular-svg-icons": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@sentry/react": "^8.0.0",
+    "@sentry/react": "8.0.0",
     "animate.css": "4.1.1",
     "axios": "1.6.8",
     "chart.js": "4.4.2",
@@ -39,8 +39,7 @@
     "lodash": "4.17.21",
     "luxon": "3.4.4",
     "numeral": "2.0.6",
-    "prettier": "3.1.1",
-    "query-string": "8.1.0",
+    "query-string": "9.0.0",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-chartjs-2": "5.2.0",
@@ -58,7 +57,7 @@
     "vite-plugin-radar": "0.9.4"
   },
   "devDependencies": {
-    "@sentry/vite-plugin": "^2.16.1",
+    "@sentry/vite-plugin": "2.16.1",
     "@typescript-eslint/eslint-plugin": "6.19.1",
     "@typescript-eslint/parser": "6.19.1",
     "@vitejs/plugin-react": "4.2.1",
@@ -73,13 +72,14 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
-    "husky": "8.0.3",
-    "lint-staged": "15.0.1",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
     "postcss": "8.4.38",
+    "prettier": "3.2.5",
     "sass": "1.69.7",
     "tailwindcss": "3.4.3",
     "typescript": "5.2.2",
-    "vite": "5.0.11"
+    "vite": "5.2.11"
   },
   "prettier": {
     "printWidth": 88
