--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
     "prettier": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
     "prettier:fix": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "prepare": "husky install",
-    "type-check": "tsc"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --ext js,jsx,ts,tsx --fix",
+      "eslint --ext js,jsx --fix",
       "prettier --write",
       "git add"
     ]
   },
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-brands-svg-icons": "6.5.2",
     "@fortawesome/free-regular-svg-icons": "6.5.2",
@@ -40,16 +38,16 @@
     "luxon": "3.4.4",
     "numeral": "2.0.6",
     "query-string": "9.0.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-app-polyfill": "3.0.0",
     "react-chartjs-2": "5.2.0",
     "react-datetime": "3.2.0",
     "react-dev-utils": "12.0.1",
-    "react-dom": "18.2.0",
-    "react-query": "3.34.7",
+    "react-dom": "18.3.1",
+    "react-query": "3.39.3",
     "react-refresh": "0.14.2",
-    "react-router": "6.21.3",
-    "react-router-dom": "6.21.3",
+    "react-router": "6.23.1",
+    "react-router-dom": "6.23.1",
     "react-select": "5.8.0",
     "slugify": "1.6.6",
     "strftime": "0.10.2",
@@ -58,27 +56,20 @@
   },
   "devDependencies": {
     "@sentry/vite-plugin": "2.16.1",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.19",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-config-react-app": "7.0.1",
-    "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "eslint-plugin-react": "7.33.2",
+    "eslint": "9.2.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
-    "sass": "1.69.7",
+    "sass": "1.77.1",
     "tailwindcss": "3.4.3",
-    "typescript": "5.2.2",
     "vite": "5.2.11"
   },
   "prettier": {
