--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 10",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 10",
     "preview": "vite preview",
-    "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
-    "prettier": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
-    "prettier:fix": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint . --ext js,jsx --fix",
+    "prettier": "prettier --check 'src/**/*.{js,jsx}'",
+    "prettier:fix": "prettier --write 'src/**/*.{js,jsx}'",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx}": [
       "eslint --ext js,jsx --fix",
       "prettier --write",
       "git add"
@@ -58,7 +58,7 @@
     "@sentry/vite-plugin": "2.16.1",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.19",
-    "eslint": "9.2.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react": "7.34.1",
