--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chartjs-adapter-luxon": "1.3.1",
     "chartjs-plugin-annotation": "3.0.1",
     "classnames": "2.5.1",
+    "core-js": "3.37.1",
     "ethereum-blockies-base64": "1.0.2",
     "lodash": "4.17.21",
     "luxon": "3.4.4",
